erDiagram
    USER ||--|| USER_FILE : "avatar"
    USER {
        SERIAL id PK
        VARCHAR username 
        VARCHAR firstName
        VARCHAR lastName 
        VARCHAR email   
        VARCHAR password
        INT avatarId FK
    }
    USER_FILE {
        SERIAL id PK
        VARCHAR fileName 
        VARCHAR mimeType 
        VARCHAR key 
        VARCHAR url 
    }
    MOVIE {
        SERIAL id PK
        VARCHAR title
        TEXT description
        DECIMAL budget
        DATE releaseDate
        INT duration
        INT directorId FK
        INT countryId FK
        INT posterId FK
        VARCHAR genres
    }
    FAVORITE_MOVIES {
        INT userId PK, FK
        INT movieId PK, FK
    }
    USER ||--|{ FAVORITE_MOVIES : "marks as favorite"
    MOVIE ||--|{ FAVORITE_MOVIES : "marked as favorite"
    MOVIE ||--|{ CHARACTER : "has"
    CHARACTER ||--|{ MOVIE : "belongs to"
    CHARACTER {
        SERIAL id PK
        VARCHAR name
        TEXT description
        VARCHAR role
        INT movieId FK
        INT personId FK
    }
    PERSON {
        SERIAL id PK
        VARCHAR firstName
        VARCHAR lastName
        TEXT biography
        DATE dateOfBirth
        VARCHAR gender
        INT countryId FK
        INT primaryPhotoId FK
    }
    PERSON_FILE {
        SERIAL id PK
        VARCHAR fileName 
        VARCHAR mimeType 
        VARCHAR key 
        VARCHAR url 
        INT personId FK
    }
    COUNTRY {
        SERIAL id PK
        VARCHAR name
    }
    PERSON ||--o| COUNTRY : "from"
    PERSON ||--o{ PERSON_FILE : "has photos"
    PERSON ||--o| PERSON_FILE : "has primary photo"
    PERSON ||--|| CHARACTER : "plays"
